src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <description>The current balance for the pub at the time that this invoice is generated</description>
        <inlineHelpText>The current balance for the pub at the time that this invoice is generated</inlineHelpText>
        <label>Current Balance</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Total__c</fullName>
        <description>The amount due for this Invoice (which can be calculated by adding the Total Amount and the Current Balance).</description>
        <inlineHelpText>The amount due for this Invoice (which can be calculated by adding the Total Amount and the Current Balance).</inlineHelpText>
        <label>Invoice Total</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that this invoice has been paid by the pub.</description>
        <inlineHelpText>This field indicates that this invoice has been paid by the pub.</inlineHelpText>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.END_DATE</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>Current_Balance__c</columns>
        <columns>Invoice_Total__c</columns>
        <columns>Paid__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべての注文</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>